--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "username": "user",
-    "password": "password",
-    "plant_id": "123456",
-    "start_date": "YYYY-MM-DD"
+    "username": "andreymicauti",
+    "password": "55566656.",
+    "plant_id": "1683832",
+    "start_date": "2023-10-09"
 }
