--- a/config.json
+++ b/config.json
@@ -2,5 +2,8 @@
     "username": "andreymicauti",
     "password": "55566656.",
     "plant_id": "1683832",
-    "start_date": "2023-10-09"
+    "start_date": "2023-10-09",
+    "datalogSn": "XGD6CJV05Y", 
+    "deviceType": "134",
+    "addr": "1"
 }
