--- a/config.json
+++ b/config.json
@@ -1,9 +1,5 @@
 {
     "username": "andreymicauti",
     "password": "55566656.",
-    "plant_id": "1683832",
-    "start_date": "2023-10-09",
-    "datalogSn": "XGD6CJV05Y", 
-    "deviceType": "134",
-    "addr": "1"
+    "start_date": "2023-10-09"
 }
